--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "clsx": "^2.1.1",
     "eslint-config-prettier": "^10.0.1",
     "framer-motion": "^12.0.11",
+    "html2canvas": "^1.4.1",
     "next": "15.1.6",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.11",
